[gd_scene load_steps=5 format=3 uid="uid://b4xuk4mfxr3x3"]

[ext_resource type="Texture2D" uid="uid://bxbst5p48f0a6" path="res://Ressources/Assets/Backgrounds/desert.png" id="1_ifah2"]
[ext_resource type="FontFile" uid="uid://qy110uf2qlpr" path="res://Ressources/Assets/Fonts/04B_30__.TTF" id="2_b8cy7"]
[ext_resource type="Script" path="res://Ressources/Scripts/MainMenu.gd" id="2_hg6lx"]
[ext_resource type="AudioStream" uid="uid://dotuydtoaa43k" path="res://Ressources/Assets/Sounds/Music/TitleScreen-OST.wav" id="4_3eguw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3eguw")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ifah2")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_hg6lx")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_b8cy7")
theme_override_font_sizes/font_size = 25
text = "Game Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button-Start" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Button-Quit")
theme_override_fonts/font = ExtResource("2_b8cy7")
text = "Start"

[node name="Button-Options" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_b8cy7")
text = "Settings"

[node name="Button-Credits" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_b8cy7")
disabled = true
text = "Credits"

[node name="Button-Quit" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../Button-Start")
theme_override_fonts/font = ExtResource("2_b8cy7")
text = "Quit"

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_b8cy7")
theme_override_font_sizes/font_size = 25
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b8cy7")
text = "Fullscreen mode"

[node name="Button-Back" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b8cy7")
text = "Back to Title screen"

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button-Start" to="CanvasLayer" method="_on_button_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button-Options" to="CanvasLayer" method="_on_button_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button-Credits" to="CanvasLayer" method="_on_button_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button-Quit" to="CanvasLayer" method="_on_button_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/CheckButton" to="CanvasLayer" method="_on_check_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button-Back" to="CanvasLayer" method="_on_button_back_pressed"]
